--- a/package.json
+++ b/package.json
@@ -1,20 +1,26 @@
 {
-  "name": "pomodoro-app",
+  "name": "centralize-app",
   "version": "0.1.0",
-  "homepage": "http://abhinrustagi.github.io/pomodoro-challenge",
   "private": true,
   "dependencies": {
+    "@bigheads/core": "^0.3.3",
+    "axios": "^0.24.0",
+    "cloudinary": "^1.27.1",
+    "firebase": "^9.2.0",
+    "framer-motion": "^5.0.0",
+    "helmet": "^4.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3"
+    "react-icons": "^4.3.1",
+    "react-router-dom": "^5.3.0",
+    "react-scripts": "^4.0.3",
+    "sass": "^1.43.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -33,8 +39,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^3.2.3"
   }
 }
