--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "dependencies": {
     "@bigheads/core": "^0.3.3",
+    "@emotion/react": "^11.7.1",
     "axios": "^0.24.0",
-    "cloudinary": "^1.27.1",
     "firebase": "^9.2.0",
     "framer-motion": "^5.0.0",
     "helmet": "^4.6.0",
@@ -14,7 +14,9 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
-    "sass": "^1.43.4"
+    "sass": "^1.43.4",
+    "tailwindcss": "^3.0.7",
+    "twin.macro": "^2.8.2"
   },
   "scripts": {
     "start": "react-scripts start",
