--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-toastify": "^8.1.0",
     "sass": "^1.45.2",
     "usetimer-react": "^1.0.1"
   },
