--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Abhin Rustagi",
   "dependencies": {
     "@emotion/react": "^11.7.1",
+    "@types/react": "^17.0.38",
     "firebase": "^9.6.2",
     "moment": "^2.29.1",
     "react": "^17.0.2",
@@ -14,15 +15,14 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-toastify": "^8.1.0",
-    "sass": "^1.45.2",
-    "usetimer-react": "^1.0.1"
+    "sass": "^1.45.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "firebase deploy --only hosting"
+    "deploy": "npm run build && firebase deploy --only hosting"
   },
   "eslintConfig": {
     "extends": [
