--- a/package.json
+++ b/package.json
@@ -5,24 +5,25 @@
   "author": "Abhin Rustagi",
   "dependencies": {
     "@emotion/react": "^11.7.1",
-    "@types/react": "^17.0.38",
     "firebase": "^9.6.2",
     "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-test-renderer": "^17.0.2",
     "react-toastify": "^8.1.0",
     "sass": "^1.45.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "npm run build && firebase deploy --only hosting"
+    "test": "jest",
+    "dev": "netlify dev"
   },
   "eslintConfig": {
     "extends": [
@@ -44,7 +45,13 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
+    "body-parser": "^1.19.1",
+    "dotenv": "^11.0.0",
+    "express": "^4.17.2",
+    "firebase-admin": "^10.0.1",
+    "jest": "^27.4.7",
     "postcss": "^8.4.5",
+    "serverless-http": "^2.7.0",
     "tailwindcss": "^3.0.12"
   }
 }
