--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Abhin Rustagi",
   "dependencies": {
     "@emotion/react": "^11.7.1",
+    "axios": "^0.24.0",
     "firebase": "^9.6.2",
     "moment": "^2.29.1",
     "react": "^17.0.2",
