--- a/package.json
+++ b/package.json
@@ -7,11 +7,18 @@
     "@emotion/react": "^11.7.1",
     "axios": "^0.24.0",
     "firebase": "^9.6.2",
+    "i18next": "^21.6.6",
+    "i18next-browser-languagedetector": "^6.1.2",
+    "immutability-helper": "^3.1.1",
     "moment": "^2.29.1",
+    "netlify-cli": "^8.9.8",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
+    "react-dnd": "^14.0.5",
+    "react-dnd-html5-backend": "^14.1.0",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-i18next": "^11.15.3",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
@@ -22,9 +29,10 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "eject": "react-scripts eject",
     "test": "jest",
-    "dev": "netlify dev"
+    "dev": "netlify dev",
+    "deploy:dev": "npm run build && netlify deploy",
+    "deploy:prod": "npm run build && netlify deploy --prod"
   },
   "eslintConfig": {
     "extends": [
