--- a/package.json
+++ b/package.json
@@ -6,10 +6,16 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "axios": "^0.24.0",
+    "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
+    "dotenv": "^14.3.2",
+    "express": "^4.17.2",
     "firebase": "^9.6.2",
+    "firebase-admin": "^10.0.2",
     "i18next": "^21.6.6",
     "i18next-browser-languagedetector": "^6.1.2",
     "immutability-helper": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "netlify-cli": "^8.9.8",
@@ -25,7 +31,9 @@
     "react-scripts": "5.0.0",
     "react-test-renderer": "^17.0.2",
     "react-toastify": "^8.1.0",
-    "sass": "^1.45.2"
+    "sass": "^1.45.2",
+    "serverless-http": "^2.7.0",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
