--- a/package.json
+++ b/package.json
@@ -5,20 +5,17 @@
   "author": "Abhin Rustagi",
   "dependencies": {
     "@emotion/react": "^11.7.1",
+    "@fontsource/plus-jakarta-sans": "^4.5.2",
     "axios": "^0.24.0",
-    "bcrypt": "^5.0.1",
-    "cors": "^2.8.5",
-    "dotenv": "^14.3.2",
-    "express": "^4.17.2",
     "firebase": "^9.6.2",
-    "firebase-admin": "^10.0.2",
+    "husky": "^7.0.4",
     "i18next": "^21.6.6",
     "i18next-browser-languagedetector": "^6.1.2",
     "immutability-helper": "^3.1.1",
-    "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "netlify-cli": "^8.9.8",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-dnd": "^14.0.5",
@@ -31,9 +28,7 @@
     "react-scripts": "5.0.0",
     "react-test-renderer": "^17.0.2",
     "react-toastify": "^8.1.0",
-    "sass": "^1.45.2",
-    "serverless-http": "^2.7.0",
-    "uuid": "^8.3.2"
+    "sass": "^1.45.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -41,7 +36,9 @@
     "test": "jest",
     "dev": "netlify dev",
     "deploy:dev": "npm run build && netlify deploy",
-    "deploy:prod": "npm run build && netlify deploy --prod"
+    "deploy:prod": "npm run build && netlify deploy --prod",
+    "lint": "prettier --check .",
+    "format": "prettier --write ."
   },
   "eslintConfig": {
     "extends": [
@@ -64,7 +61,17 @@
   "devDependencies": {
     "autoprefixer": "^10.4.2",
     "jest": "^27.4.7",
+    "lint-staged": "^12.3.3",
     "postcss": "^8.4.5",
+    "prettier": "^2.5.1",
     "tailwindcss": "^3.0.12"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*": "prettier --write"
   }
 }
